--- a/static/main.html
+++ b/static/main.html
@@ -147,7 +147,7 @@
           <div class="u-container-layout u-container-layout-1">
             <a href="https://nicepage.com" class="u-border-1 u-border-palette-1-light-1 u-btn u-btn-round u-button-style u-palette-1-light-3 u-radius u-text-palette-1-dark-2 u-btn-1">Bouton&nbsp;<span class="u-icon u-text-palette-1-dark-2 u-icon-1"><svg class="u-svg-content" viewBox="0 0 490.677 490.677" x="0px" y="0px" style="width: 1em; height: 1em;"><path d="M489.272,37.339c-1.92-3.307-5.44-5.333-9.259-5.333H10.68c-3.819,0-7.339,2.027-9.259,5.333    c-1.899,3.307-1.899,7.36,0.021,10.667l234.667,405.333c1.899,3.307,5.419,5.333,9.237,5.333s7.339-2.027,9.237-5.333 L489.251,48.005C491.149,44.72,491.149,40.645,489.272,37.339z"></path></svg></span>
             </a>
-            <div id="line-labels"></div>
+            <div id="line-labels" style="background-color: #303233;"></div>
           </div>
         </div>
       </div>
